some adaptive added

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -5,5 +5,8 @@ $white: #FFFFFF;
 $blue: #036FC7;
 $yellow: #FFDD76;
 
-$desktop-sm: 1015px;
-$tablet-bp: 990px;
+$desktop-sm: 1150px;
+$tablet-bp-wide: 1050px;
+$tablet-bp: 991px;
+$mobile-bp: 767px;
+$mobile-bp-sm: 575px;
