--- a/scss/blocks/_care.scss
+++ b/scss/blocks/_care.scss
@@ -26,7 +26,7 @@
 .care-main__left-slogan {
     width: 25rem;
     height: 3.2rem;
-    background: url(/img/slogan-bg.png) bottom no-repeat;
+    background: url(../img/slogan-bg.png) bottom no-repeat;
     font-size: 2rem;    
     font-weight: 400;
     line-height: 1.6;
