--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -3,8 +3,6 @@
     outline: 0;
     margin-right: 1.6rem;
     padding: .77em 1.46em; 
-    // display: flex;
-    // align-items: center;
     font-family: Arial;
     font-size: 1.7rem;
     font-weight: 400;
@@ -69,5 +67,73 @@
             background: lighten($black, 2%);
             box-shadow: 0 7px 13px rgba($white, 0.3);
         }
+    }
+    @include breakpoint($mobile-bp-sm) {
+        width: 50%;
+        display: block;
+        margin: 0 auto 1rem;
+        &:last-child {
+            margin: 0 auto 1rem;
+        }
+    }
+}
+.burger {
+    display: none;
+    padding: 0;
+    width: 3rem;
+    height: 2rem;
+    position: absolute;
+    top: 50%;
+    right: 2.5rem;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
+    font-size: 0;
+    color: transparent;
+    cursor: pointer;
+
+    &:before,
+    &:after,
+    span {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: $black;
+        position: absolute;
+        right: 0;
+    }
+    &:before {
+        content: "";
+        top: 0;
+        transition: transform .2s linear;
+    }
+    &:after {
+        content: "";
+        bottom: 0;
+        transition: transform .2s linear;
+    }
+    span {
+        top: 50%;
+        transform: translateY(-50%);
+        transition: opacity .2s linear;
+    }
+    &.active {
+        span {
+            opacity: 0;
+        }
+        &:before {
+            transform: rotate(45deg);
+        }
+        &:after {
+            transform: rotate(-45deg);
+        }
+        &:before,
+        &:after {
+            top: 50%;
+        }
+    }
+
+    @include breakpoint($tablet-bp-wide) {
+        display: block;
     }
 }
