--- a/scss/blocks/_created.scss
+++ b/scss/blocks/_created.scss
@@ -1,11 +1,15 @@
 .created {
     padding: 14.3rem 0 11.8rem;
     background: $black;
+    overflow: hidden;
 }
 .created-content {
     margin-bottom: 12.7rem;
     position: relative;
     display: flex;
+    @include breakpoint($desktop-sm) {
+        overflow: hidden;
+    }
 }
 .created-content__info {
     width: 55.77%;
@@ -67,11 +71,22 @@
     max-width: 60.6rem;
     top: 0;
     right: -19.2rem;
+    @include breakpoint($desktop-sm) {
+        position: static;
+        width: 42%;
+    }
 }
 .created-content__iphone-img {
     display: block;
     width: 100%;   
+    max-width: 60.6rem;
     height: auto;
+    @include breakpoint($desktop-sm) {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+
+    }
 }
 .buttons {
     display: flex;
