--- a/scss/blocks/_improvements.scss
+++ b/scss/blocks/_improvements.scss
@@ -2,6 +2,11 @@
     margin-bottom: 14.2rem;
     display: flex;
     flex-wrap: wrap;
+
+    @include breakpoint($desktop-sm) {
+        margin-bottom: 11.2rem;
+        justify-content: space-between;
+    }
 }
 .improvements-block {
     margin-right: 4rem;
@@ -12,6 +17,12 @@
     text-align: center;
     &:last-child { 
         margin-right: 0;
+    }
+    @include breakpoint($desktop-sm) {
+        margin-right: 0;
+        width: 30%;
+        height: auto;
+        max-height: 100%;
     }
 }
 .improvements-block__img {
