--- a/scss/blocks/_reliability.scss
+++ b/scss/blocks/_reliability.scss
@@ -53,6 +53,9 @@
     &:nth-child(3) {
         max-width: 32.5rem;
     }
+    @include breakpoint($tablet-bp-wide) {
+        height: auto;
+    }
 }
 .reliability-block__item-img {
     margin-bottom: 1.9rem;
