gh-pages adaptive

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,5 +8,6 @@ $yellow: #FFDD76;
 $desktop-sm: 1150px;
 $tablet-bp-wide: 1050px;
 $tablet-bp: 991px;
-$mobile-bp: 767px;
+$mobile-bp: 769px;
 $mobile-bp-sm: 575px;
+$mobile-bp-ultra-sm: 430px;
