--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,5 +1,14 @@
 .about {
     margin: 7.9rem 0 14.3rem;
+    @include breakpoint($tablet-bp) {
+        margin-bottom: 10.3rem;
+    }
+    @include breakpoint($mobile-bp) {
+        margin: 7.9rem 0 8rem;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        margin: 7.9rem 0 6rem;
+    }
 }
 .about-title {
     font-size: 3.2rem;  
@@ -7,6 +16,9 @@
     line-height: 1.5;
     color: $black;
     text-align: center;
+    @include breakpoint($mobile-bp-sm) {
+        font-size: 2.5rem;
+    }
 }
 .about-title__txt {
     padding: 2.1rem 11.4rem 2.8rem 11.5rem;
@@ -15,15 +27,38 @@
     line-height: 1.6;
     color: $grey;
     text-align: center;
+    @include breakpoint($mobile-bp) {
+        padding: 1.5rem 0 2rem;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        font-size: 1.5rem;
+    }
 }
 .about-block__delivery {
     margin-bottom: 6.4rem;
     margin-right: 6.3rem;
     display: flex;
+    flex-wrap: wrap;
+    @include breakpoint($tablet-bp) {
+        margin-right: 0;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        margin-bottom: 2.4rem;
+        justify-content: center;
+        text-align: center;
+    }
 }
 .about-block__delivery-info {
     max-width: 59.6%;
     padding-right: 9.1rem;
+    @include breakpoint($mobile-bp) {
+        padding-right: 3.1rem;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        margin-bottom: 1.5rem;
+        padding-right: 0;
+        max-width: 100%;
+    }
 }
 .about-block__delivery-title {
     margin-top: 6.7rem;
@@ -32,6 +67,12 @@
     font-weight: 400;
     line-height: 1.33;
     color: $black;
+    @include breakpoint($tablet-bp) {
+        margin-top: 2.7rem;
+    }
+    @include breakpoint($mobile-bp) {   
+        margin-top: 0.7rem;
+    }
 }
 .about-block__delivery-txt {
     max-width: 50rem;
@@ -42,6 +83,9 @@
 }
 .about-block__delivery-img {
     width: 40.4%;
+    @include breakpoint($mobile-bp-sm) {
+        width: 50%;
+    }
 }
 .delivery-img {
     display: block;
@@ -55,9 +99,21 @@
     justify-content: space-between;
     margin-left: 8.2rem;
     margin-bottom: 6.4rem;
+    @include breakpoint($tablet-bp) {
+        margin-left: 0;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        margin-bottom: 2.4rem;
+        justify-content: center;
+        text-align: center;
+    }
 }
 .about-block__control-img {
     width: 36.8%;
+    @include breakpoint($mobile-bp-sm) {
+        width: 50%;
+        order: 2;
+    }
 }
 .control-img {
     display: block;
@@ -67,6 +123,10 @@
 }
 .about-block__control-info {
     max-width: 52.87%;
+    @include breakpoint($mobile-bp-sm) {
+        max-width: 100%;
+        margin-bottom: 1.5rem;
+    }
 }
 .about-block__control-title {
     margin-top: 6.7rem;
@@ -75,6 +135,12 @@
     font-weight: 400;
     line-height: 1.33;
     color: $black;
+    @include breakpoint($tablet-bp) {
+        margin-top: 2.7rem;
+    }
+    @include breakpoint($mobile-bp) {   
+        margin-top: 0.7rem;
+    }
 }
 .about-block__control-txt {
     padding-right: 1.5rem;
@@ -86,9 +152,29 @@
 .about-block__data {
     margin-right: 5.6rem;
     display: flex;
+    flex-wrap: wrap;
+    @include breakpoint($tablet-bp) {
+        margin-right: 0;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        
+        justify-content: center;
+        text-align: center;
+    }
 }
 .about-block__data-info {
     max-width: 55rem;
+    @include breakpoint($tablet-bp-wide) {
+        width: 50%;
+    }
+    @include breakpoint($tablet-bp) {
+        max-width: 52%;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        width: auto;
+        max-width: 100%;
+        margin-bottom: 1.5rem;
+    }
 }
 .about-block__data-title {
     margin: 5.5rem 0 1.9rem;
@@ -96,6 +182,12 @@
     font-weight: 400;
     line-height: 1.33;
     color: $black;
+    @include breakpoint($tablet-bp) {
+        margin-top: 2.7rem;
+    }
+    @include breakpoint($mobile-bp) {   
+        margin-top: 0.7rem;
+    }
 }
 .about-block__data-txt {
     padding-right: 5rem;
@@ -103,7 +195,24 @@
     font-weight: 400;
     line-height: 1.5;
     color: $grey;
+    @include breakpoint($mobile-bp-sm) {
+        padding-right: 0;
+    }
 }
 .about-block__data-img {
     margin-left: 3.4rem;
+    @include breakpoint($mobile-bp) {
+        width: 48%;
+        margin-left: 0;
+        display: flex;
+        align-items: center;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        width: 50%;
+    }
+}
+.data-img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
