--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -10,4 +10,7 @@
     font-weight: 400;
     line-height: 1.5;
     color: $grey;
+    @include breakpoint($mobile-bp-ultra-sm) {
+        font-size: 1.3rem;
+    }
 }
