--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,9 +1,26 @@
 .header {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 9.6rem;
+    display: flex;
+    align-items: center;
+    top: 0; 
+    
+    &.fixed {
+        position: fixed;  
+        background-color: $white;
+        z-index: 100;
+        height: auto;
+    }
+    @include breakpoint($tablet-bp) {
+        height: auto;
+    }
+}
+.header-inner {
     padding: 0 1.5rem;
     width: 100%;
     max-width: 147rem;
-    height: 9.6rem;
+    
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -13,6 +30,10 @@
         height: auto;
         padding: 1rem;
     }
+    @include breakpoint($mobile-bp) {
+        padding: 5px;
+    }
+    
 }
 .header-logo {
     display: flex;
