--- a/scss/blocks/_howtowork.scss
+++ b/scss/blocks/_howtowork.scss
@@ -1,14 +1,28 @@
 .howtowork {
     margin: 14.3rem 0 9.6rem;
+    @include breakpoint($mobile-bp) {
+        margin: 8.3rem 0 6.6rem;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        margin: 6.3rem 0 4.6rem;
+    }
 }
 .howtowrk-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @include breakpoint($mobile-bp) {
+        justify-content: center;
+    }
 }
 .howtowork-left {
     width: 43.7%;
     max-width: 46.2rem;
+    @include breakpoint($mobile-bp) {
+        width: 100%;
+        max-width: 76.8rem;
+        text-align: center;
+    }
 }
 .howtowork-left__title {
     margin-bottom: 2.1rem;
@@ -16,6 +30,9 @@
     font-weight: 400;
     line-height: 1.5;
     color: $black;
+    @include breakpoint($mobile-bp-sm) {
+        font-size: 2.4rem;
+    }
 }
 .howtowork-left__txt {
     margin-bottom: 6rem;
@@ -23,21 +40,37 @@
     font-weight: 400;
     line-height: 1.6;
     color: $grey;
+    @include breakpoint($mobile-bp) {
+        margin-bottom: 3rem;
+    }
+    @include breakpoint($mobile-bp-sm) {
+        font-size: 1.5rem;
+    }
 }
 .howtowrk-left__img {
     display: block;
     width: 100%;
     max-width: 33.6rem;
     height: auto;
+    @include breakpoint($mobile-bp) {
+        margin: 0 auto;
+    }
 }
 .howtowork-right {
     width: 49.2%;
     max-width: 52rem;
+    @include breakpoint($mobile-bp) {
+        width: 100%;
+        max-width: 76.8rem;
+    }
 }
 .howtowrk-right__item {
     margin-bottom: 3rem;
     padding-left: 7.2rem;
     position: relative;
+    @include breakpoint($mobile-bp-ultra-sm) {
+        padding-left: 4rem;
+    }
 }
 .howtowork-right__item-num {
     position: absolute;
@@ -49,6 +82,11 @@
     border: 1px solid $light-grey;
     top: 0;
     left: 0;
+
+    @include breakpoint($mobile-bp-ultra-sm) {
+        width: 3rem;
+        height: 3rem;
+    }
 }
 .howtowork-right__item-title {
     margin-bottom: 1rem;
