--- a/css/style.css
+++ b/css/style.css
@@ -2513,7 +2513,7 @@ h1, h2, h3, h4, h5, h6, p, hr {
   padding: 11.7rem 3.8rem;
   width: 100%;
   height: 46.6rem;
-  background: url("/img/contact-bg.png") center no-repeat;
+  background: url("../img/contact-bg.png") center no-repeat;
   background-size: cover;
   text-align: center;
 }
