--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -9,7 +9,7 @@
     padding: 11.7rem 3.8rem;
     width: 100%;
     height: 46.6rem;
-    background: url("../../img/contact-bg.png") center no-repeat;
+    background: url("../img/contact-bg.png") center no-repeat;
     background-size: cover;
     text-align: center;
     @include breakpoint($tablet-bp) {
