--- a/scss/blocks/_improvements.scss
+++ b/scss/blocks/_improvements.scss
@@ -57,13 +57,13 @@
     right: 0;
     z-index: 5;
 }
-.improvements-block__img-vector {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    z-index: 10;
-}
+// .improvements-block__img-vector {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate3d(-50%, -50%, 0);
+//     z-index: 10;
+// }
 .improvements-block__title {
     margin-bottom: 1rem;
     font-size: 1.8rem;
