--- a/css/style.css
+++ b/css/style.css
@@ -633,15 +633,6 @@ h1, h2, h3, h4, h5, h6, p, hr {
   z-index: 5;
 }
 
-.improvements-block__img-vector {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate3d(-50%, -50%, 0);
-          transform: translate3d(-50%, -50%, 0);
-  z-index: 10;
-}
-
 .improvements-block__title {
   margin-bottom: 1rem;
   font-size: 1.8rem;
@@ -2513,7 +2504,7 @@ h1, h2, h3, h4, h5, h6, p, hr {
   padding: 11.7rem 3.8rem;
   width: 100%;
   height: 46.6rem;
-  background: url("../../img/contact-bg.png") center no-repeat;
+  background: url("../img/contact-bg.png") center no-repeat;
   background-size: cover;
   text-align: center;
 }
